chore: configurações para execução de scrapping em container